--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "next": "15.0.3",
     "pnpm": "^9.13.2",
     "react": "19.0.0-rc-66855b96-20241106",
