--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "headlessui": "^0.0.0",
     "next": "15.0.3",
     "pnpm": "^9.13.2",
     "react": "19.0.0-rc-66855b96-20241106",
