--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "clsx": "^2.1.1",
     "headlessui": "^0.0.0",
     "lucide-react": "^0.468.0",
-    "next": "15.0.3",
-    "next-auth": "^4.24.11",
+    "next": "^15.1.7",
+    "next-auth": "^5.0.0-beta.25",
     "pnpm": "^9.13.2",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
