--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/neon-adapter": "^1.8.0",
+    "@auth/prisma-adapter": "2.7.2",
     "@headlessui/react": "^2.2.0",
+    "@neondatabase/serverless": "^0.10.4",
+    "@prisma/adapter-neon": "^6.5.0",
+    "@prisma/client": "6.5.0",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -20,9 +25,10 @@
     "clsx": "^2.1.1",
     "headlessui": "^0.0.0",
     "lucide-react": "^0.468.0",
-    "next": "^15.1.7",
+    "next": "^15.2.3",
     "next-auth": "^5.0.0-beta.25",
     "pnpm": "^9.13.2",
+    "prisma": "^6.5.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "swr": "^2.2.5",
