Revert "Compliance with Vercel edge function size limits as well as Prisma/Vercel deployment compatibility"
This reverts commit bf07ec46ff968f9796a6c9bce3c81c78cde733bf.

--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "smnd-project-manager",
-  "version": "0.7.0",
+  "name": "soc-platform",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "lint": "next lint"
   },
   "dependencies": {
     "@auth/neon-adapter": "^1.8.0",
