--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth/neon-adapter": "^1.8.0",
     "@auth/prisma-adapter": "2.7.2",
+    "@aws-sdk/client-s3": "^3.777.0",
     "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
     "@neondatabase/serverless": "^0.10.4",
@@ -24,6 +25,7 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
@@ -34,15 +36,18 @@
     "lucide-react": "^0.468.0",
     "next": "^15.2.3",
     "next-auth": "^5.0.0-beta.25",
+    "next-themes": "^0.4.6",
     "pnpm": "^9.13.2",
     "prisma": "^6.5.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.54.2",
+    "sonner": "^2.0.2",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.4",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
